--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "laravel/horizon": "^5.21",
-        "nesbot/carbon": "^2.17",
-        "illuminate/support": "^8.17|^9.0|^10.0"
+        "laravel/horizon": "^5.24",
+        "nesbot/carbon": "^2.17 || ^3.0",
+        "illuminate/support": "^8.17|^9.0|^10.0|^11.0"
     }
 }
